--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 
 #home::before {
     content: "";
-    background: url('images/food1.jpg') no-repeat center center/cover;
+    background: url('Images/food1.jpg') no-repeat center center/cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -193,7 +193,7 @@ body {
 #client-section::before {
     content: "";
     position: absolute;
-    background: url('images/project1bg2.jpg') no-repeat center center/cover;
+    background: url('Images/project1bg2.jpg') no-repeat center center/cover;
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -223,7 +223,7 @@ body {
 #contact::before {
     content: "";
     position: absolute;
-    background: url('images/contact2.jpg') no-repeat center center/cover;
+    background: url('Images/contact2.jpg') no-repeat center center/cover;
     width: 100%;
     height: 100%;
     z-index: -1;
